--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -8,5 +8,9 @@
   "Submit": "Submit",
   "Submitting...": "Submitting...",
   "Leave a comment": "Leave a comment",
-  "Thank you for your review!": "Thank you for your review!"
+  "Thank you for your review!": "Thank you for your review!",
+  "Rank": "Rank",
+  "Name": "Name",
+  "Performance": "Performance",
+  "Time": "Time"
 }
