--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -8,5 +8,6 @@
   "Submit": "Absenden",
   "Submitting...": "Wird gesendet...",
   "Leave a comment": "Kommentar hinterlassen",
-  "Thank you for your review!": "Vielen Dank für Ihre Bewertung!"
+  "Thank you for your review!": "Vielen Dank für Ihre Bewertung!",
+  "Rank": "Platz"
 }
