--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -8,5 +8,6 @@
   "Submit": "Enviar",
   "Submitting...": "Enviando...",
   "Leave a comment": "Dejar un comentario",
-  "Thank you for your review!": "¡Gracias por su evaluación!"
+  "Thank you for your review!": "¡Gracias por su evaluación!",
+  "Rank": "Rango"
 }
