--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -8,5 +8,6 @@
   "Submit": "Zatwierdź",
   "Submitting...": "Wysyłanie...",
   "Leave a comment": "Zostaw komentarz",
-  "Thank you for your review!": "Dziękujemy za Twoją opinię!"
+  "Thank you for your review!": "Dziękujemy za Twoją opinię!",
+  "Rank": "Ranking"
 }
