--- a/src/assets/i18n/tr.json
+++ b/src/assets/i18n/tr.json
@@ -8,5 +8,6 @@
   "Submit": "Gönder",
   "Submitting...": "Gönderiliyor...",
   "Leave a comment": "Yorum bırak",
-  "Thank you for your review!": "Değerlendirmeniz için teşekkürler!"
+  "Thank you for your review!": "Değerlendirmeniz için teşekkürler!",
+  "Rank": "Sıra"
 }
