--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -8,5 +8,6 @@
   "Submit": "Підтвердити",
   "Submitting...": "Відправка...",
   "Leave a comment": "Залишити коментар",
-  "Thank you for your review!": "Дякуємо за ваш відгук!"
+  "Thank you for your review!": "Дякуємо за ваш відгук!",
+  "Rank": "Ранг"
 }
