--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -8,5 +8,6 @@
   "Submit": "Gửi đi",
   "Submitting...": "Đang gửi...",
   "Leave a comment": "Để lại bình luận",
-  "Thank you for your review!": "Cảm ơn bạn đã đánh giá!"
+  "Thank you for your review!": "Cảm ơn bạn đã đánh giá!",
+  "Rank": "Xếp hạng"
 }
