--- a/assets/i18n/ar.json
+++ b/assets/i18n/ar.json
@@ -8,5 +8,6 @@
   "Submit": "إرسال",
   "Submitting...": "جاري الإرسال...",
   "Leave a comment": "اترك تعليقًا",
-  "Thank you for your review!": "شكرًا لتقييمك!"
+  "Thank you for your review!": "شكرًا لتقييمك!",
+  "Rank": "رتبة"
 }
