--- a/assets/i18n/cn.json
+++ b/assets/i18n/cn.json
@@ -8,5 +8,6 @@
   "Submit": "提交",
   "Submitting...": "正在提交...",
   "Leave a comment": "留下评论",
-  "Thank you for your review!": "感谢您的评价！"
+  "Thank you for your review!": "感谢您的评价！",
+  "Rank": "排名"
 }
