:sparkles: adds tour button

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -9,5 +9,7 @@
   "Submitting...": "جاري الإرسال...",
   "Leave a comment": "اترك تعليقًا",
   "Thank you for your review!": "شكرًا لتقييمك!",
-  "Rank": "رتبة"
+  "Rank": "رتبة",
+  "Show Tour Button": "إظهار زر الجولة",
+  "Start Tour": "بدء الجولة"
 }
