--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,8 +9,10 @@
   "Submitting...": "Submitting...",
   "Leave a comment": "Leave a comment",
   "Thank you for your review!": "Thank you for your review!",
-  "Rank": "Rank",
   "Name": "Name",
   "Performance": "Performance",
-  "Time": "Time"
+  "Time": "Time",
+  "Rank": "Rank",
+  "Show Tour Button": "Show Tour Button",
+  "Start Tour": "Start Tour"
 }
