--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -9,5 +9,7 @@
   "Submitting...": "Enviando...",
   "Leave a comment": "Dejar un comentario",
   "Thank you for your review!": "¡Gracias por su evaluación!",
-  "Rank": "Rango"
+  "Rank": "Rango",
+  "Show Tour Button": "Mostrar botón de recorrido",
+  "Start Tour": "Comenzar recorrido"
 }
