--- a/src/assets/i18n/tr.json
+++ b/src/assets/i18n/tr.json
@@ -9,5 +9,7 @@
   "Submitting...": "Gönderiliyor...",
   "Leave a comment": "Yorum bırak",
   "Thank you for your review!": "Değerlendirmeniz için teşekkürler!",
-  "Rank": "Sıra"
+  "Rank": "Sıra",
+  "Show Tour Button": "Tur Düğmesini Göster",
+  "Start Tour": "Turu Başlat"
 }
