--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -9,5 +9,7 @@
   "Submitting...": "Wird gesendet...",
   "Leave a comment": "Kommentar hinterlassen",
   "Thank you for your review!": "Vielen Dank für Ihre Bewertung!",
-  "Rank": "Platz"
+  "Rank": "Platz",
+  "Show Tour Button": "Tour-Button anzeigen",
+  "Start Tour": "Tour starten"
 }
