--- a/assets/i18n/cn.json
+++ b/assets/i18n/cn.json
@@ -9,5 +9,7 @@
   "Submitting...": "正在提交...",
   "Leave a comment": "留下评论",
   "Thank you for your review!": "感谢您的评价！",
-  "Rank": "排名"
+  "Rank": "排名",
+  "Show Tour Button": "显示游览按钮",
+  "Start Tour": "开始游览"
 }
