--- a/assets/i18n/pl.json
+++ b/assets/i18n/pl.json
@@ -9,5 +9,7 @@
   "Submitting...": "Wysyłanie...",
   "Leave a comment": "Zostaw komentarz",
   "Thank you for your review!": "Dziękujemy za Twoją opinię!",
-  "Rank": "Ranking"
+  "Rank": "Ranking",
+  "Show Tour Button": "Pokaż przycisk wycieczki",
+  "Start Tour": "Rozpocznij wycieczkę"
 }
