--- a/assets/i18n/ua.json
+++ b/assets/i18n/ua.json
@@ -9,5 +9,7 @@
   "Submitting...": "Відправка...",
   "Leave a comment": "Залишити коментар",
   "Thank you for your review!": "Дякуємо за ваш відгук!",
-  "Rank": "Ранг"
+  "Rank": "Ранг",
+  "Show Tour Button": "Показати кнопку туру",
+  "Start Tour": "Почати тур"
 }
