--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -9,5 +9,7 @@
   "Submitting...": "Đang gửi...",
   "Leave a comment": "Để lại bình luận",
   "Thank you for your review!": "Cảm ơn bạn đã đánh giá!",
-  "Rank": "Xếp hạng"
+  "Rank": "Xếp hạng",
+  "Show Tour Button": "Hiển thị Nút Tour",
+  "Start Tour": "Bắt đầu Tour"
 }
