:sparkles: adds feedback popup

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -11,5 +11,7 @@
   "Thank you for your review!": "شكرًا لتقييمك!",
   "Rank": "رتبة",
   "Show Tour Button": "إظهار زر الجولة",
-  "Start Tour": "بدء الجولة"
+  "Start Tour": "بدء الجولة",
+  "Feedback": "تعليق",
+  "We'd love your feedback!": "نحن نحب تعليقاتك!"
 }
