--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -11,5 +11,7 @@
   "Thank you for your review!": "感谢您的评价！",
   "Rank": "排名",
   "Show Tour Button": "显示游览按钮",
-  "Start Tour": "开始游览"
+  "Start Tour": "开始游览",
+  "Feedback": "反馈",
+  "We'd love your feedback!": "我们很乐意听取您的反馈！"
 }
