--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,5 +14,7 @@
   "Time": "Time",
   "Rank": "Rank",
   "Show Tour Button": "Show Tour Button",
-  "Start Tour": "Start Tour"
+  "Start Tour": "Start Tour",
+  "Feedback": "Feedback",
+  "We'd love your feedback!": "We'd love your feedback!"
 }
