--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -11,5 +11,7 @@
   "Thank you for your review!": "¡Gracias por su evaluación!",
   "Rank": "Rango",
   "Show Tour Button": "Mostrar botón de recorrido",
-  "Start Tour": "Comenzar recorrido"
+  "Start Tour": "Comenzar recorrido",
+  "Feedback": "Comentarios",
+  "We'd love your feedback!": "¡Nos encantaría recibir sus comentarios!"
 }
