--- a/assets/i18n/de.json
+++ b/assets/i18n/de.json
@@ -11,5 +11,7 @@
   "Thank you for your review!": "Vielen Dank für Ihre Bewertung!",
   "Rank": "Platz",
   "Show Tour Button": "Tour-Button anzeigen",
-  "Start Tour": "Tour starten"
+  "Start Tour": "Tour starten",
+  "Feedback": "Feedback",
+  "We'd love your feedback!": "Wir freuen uns über Ihr Feedback!"
 }
