--- a/assets/i18n/pl.json
+++ b/assets/i18n/pl.json
@@ -11,5 +11,7 @@
   "Thank you for your review!": "Dziękujemy za Twoją opinię!",
   "Rank": "Ranking",
   "Show Tour Button": "Pokaż przycisk wycieczki",
-  "Start Tour": "Rozpocznij wycieczkę"
+  "Start Tour": "Rozpocznij wycieczkę",
+  "Feedback": "Opinia",
+  "We'd love your feedback!": "Bardzo chętnie poznamy Twoją opinię!"
 }
