--- a/assets/i18n/tr.json
+++ b/assets/i18n/tr.json
@@ -11,5 +11,7 @@
   "Thank you for your review!": "Değerlendirmeniz için teşekkürler!",
   "Rank": "Sıra",
   "Show Tour Button": "Tur Düğmesini Göster",
-  "Start Tour": "Turu Başlat"
+  "Start Tour": "Turu Başlat",
+  "Feedback": "Geribildirim",
+  "We'd love your feedback!": "Geribildiriminizi çok isteriz!"
 }
