--- a/assets/i18n/ua.json
+++ b/assets/i18n/ua.json
@@ -11,5 +11,7 @@
   "Thank you for your review!": "Дякуємо за ваш відгук!",
   "Rank": "Ранг",
   "Show Tour Button": "Показати кнопку туру",
-  "Start Tour": "Почати тур"
+  "Start Tour": "Почати тур",
+  "Feedback": "Зворотній зв'язок",
+  "We'd love your feedback!": "Ми будемо раді вашому відгуку!"
 }
