--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -11,5 +11,7 @@
   "Thank you for your review!": "Cảm ơn bạn đã đánh giá!",
   "Rank": "Xếp hạng",
   "Show Tour Button": "Hiển thị Nút Tour",
-  "Start Tour": "Bắt đầu Tour"
+  "Start Tour": "Bắt đầu Tour",
+  "Feedback": "Phản hồi",
+  "We'd love your feedback!": "Chúng tôi rất vui khi nhận được phản hồi của bạn!"
 }
