:globe_with_meridians: adds missing translations

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -9,6 +9,9 @@
   "Submitting...": "正在提交...",
   "Leave a comment": "留下评论",
   "Thank you for your review!": "感谢您的评价！",
+  "Name": "名称",
+  "Performance": "表现",
+  "Time": "时间",
   "Rank": "排名",
   "Show Tour Button": "显示游览按钮",
   "Start Tour": "开始游览",
