--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -9,6 +9,9 @@
   "Submitting...": "Wysyłanie...",
   "Leave a comment": "Zostaw komentarz",
   "Thank you for your review!": "Dziękujemy za Twoją opinię!",
+  "Name": "Nazwa",
+  "Performance": "Wydajność",
+  "Time": "Czas",
   "Rank": "Ranking",
   "Show Tour Button": "Pokaż przycisk wycieczki",
   "Start Tour": "Rozpocznij wycieczkę",
