--- a/src/assets/i18n/tr.json
+++ b/src/assets/i18n/tr.json
@@ -9,6 +9,9 @@
   "Submitting...": "Gönderiliyor...",
   "Leave a comment": "Yorum bırak",
   "Thank you for your review!": "Değerlendirmeniz için teşekkürler!",
+  "Name": "Ad",
+  "Performance": "Performans",
+  "Time": "Zaman",
   "Rank": "Sıra",
   "Show Tour Button": "Tur Düğmesini Göster",
   "Start Tour": "Turu Başlat",
