--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -9,6 +9,9 @@
   "Submitting...": "Đang gửi...",
   "Leave a comment": "Để lại bình luận",
   "Thank you for your review!": "Cảm ơn bạn đã đánh giá!",
+  "Name": "Tên",
+  "Performance": "Hiệu suất",
+  "Time": "Thời gian",
   "Rank": "Xếp hạng",
   "Show Tour Button": "Hiển thị Nút Tour",
   "Start Tour": "Bắt đầu Tour",
