--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -9,6 +9,9 @@
   "Submitting...": "جاري الإرسال...",
   "Leave a comment": "اترك تعليقًا",
   "Thank you for your review!": "شكرًا لتقييمك!",
+  "Name": "الاسم",
+  "Performance": "الأداء",
+  "Time": "الوقت",
   "Rank": "رتبة",
   "Show Tour Button": "إظهار زر الجولة",
   "Start Tour": "بدء الجولة",
