--- a/assets/i18n/de.json
+++ b/assets/i18n/de.json
@@ -9,6 +9,9 @@
   "Submitting...": "Wird gesendet...",
   "Leave a comment": "Kommentar hinterlassen",
   "Thank you for your review!": "Vielen Dank für Ihre Bewertung!",
+  "Name": "Name",
+  "Performance": "Leistung",
+  "Time": "Zeit",
   "Rank": "Platz",
   "Show Tour Button": "Tour-Button anzeigen",
   "Start Tour": "Tour starten",
