--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -9,6 +9,9 @@
   "Submitting...": "Enviando...",
   "Leave a comment": "Dejar un comentario",
   "Thank you for your review!": "¡Gracias por su evaluación!",
+  "Name": "Nombre",
+  "Performance": "Rendimiento",
+  "Time": "Tiempo",
   "Rank": "Rango",
   "Show Tour Button": "Mostrar botón de recorrido",
   "Start Tour": "Comenzar recorrido",
