--- a/assets/i18n/ua.json
+++ b/assets/i18n/ua.json
@@ -9,6 +9,9 @@
   "Submitting...": "Відправка...",
   "Leave a comment": "Залишити коментар",
   "Thank you for your review!": "Дякуємо за ваш відгук!",
+  "Name": "Ім'я",
+  "Performance": "Виконання",
+  "Time": "Час",
   "Rank": "Ранг",
   "Show Tour Button": "Показати кнопку туру",
   "Start Tour": "Почати тур",
