--- a/assets/i18n/i18n.yml
+++ b/assets/i18n/i18n.yml
@@ -3,15 +3,15 @@ i18n:
     "de": "Beschreibung"
     "en": "Description"
     "es": "Descripción"
-    "cn": "描述"
-    "ua": "Опис"
+    "zh": "描述"
+    "uk": "Опис"
     "tr": "Açıklama"
     "vi": "Mô tả"
   "Start page":
     "de": "Startseite"
     "en": "Start page"
     "es": "Página de inicio"
-    "cn": "起始页"
-    "ua": "Головна сторінка"
+    "zh": "起始页"
+    "uk": "Головна сторінка"
     "tr": "Başlangıç sayfası"
     "vi": "Trang chủ"
