:fire::heavy_minus_sign: removed yew-i18n

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,4 +1,5 @@
 {
+  "Language": "اللغة",
   "Please select a language from the dropdown.": "الرجاء اختيار لغة من القائمة المنسدلة.",
   "Please select a language:": "الرجاء اختيار لغة:",
   "Select Language": "اختر اللغة",
