--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,4 +1,5 @@
 {
+  "Language": "Idioma",
   "Please select a language from the dropdown.": "Por favor, seleccione un idioma del menú desplegable.",
   "Please select a language:": "Por favor, seleccione un idioma:",
   "Select Language": "Seleccionar idioma",
