--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -1,4 +1,5 @@
 {
+  "Language": "Мова",
   "Please select a language from the dropdown.": "Будь ласка, виберіть мову зі списку.",
   "Please select a language:": "Будь ласка, виберіть мову:",
   "Select Language": "Вибрати мову",
