--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -1,4 +1,5 @@
 {
+  "Language": "语言",
   "Please select a language from the dropdown.": "请从下拉菜单中选择一种语言。",
   "Please select a language:": "请选择一种语言：",
   "Select Language": "选择语言",
