--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -1,4 +1,5 @@
 {
+  "Language": "Language",
   "Please select a language from the dropdown.": "Please select a language from the dropdown.",
   "Please select a language:": "Please select a language:",
   "Select Language": "Select Language",
