--- a/assets/i18n/pl.json
+++ b/assets/i18n/pl.json
@@ -1,4 +1,5 @@
 {
+  "Language": "Język",
   "Please select a language from the dropdown.": "Proszę wybrać język z listy rozwijanej.",
   "Please select a language:": "Proszę wybrać język:",
   "Select Language": "Wybierz język",
