--- a/assets/i18n/tr.json
+++ b/assets/i18n/tr.json
@@ -1,4 +1,5 @@
 {
+  "Language": "Dil",
   "Please select a language from the dropdown.": "Lütfen açılır menüden bir dil seçin.",
   "Please select a language:": "Lütfen bir dil seçin:",
   "Select Language": "Dil Seçin",
