--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -1,4 +1,5 @@
 {
+  "Language": "Ngôn ngữ",
   "Please select a language from the dropdown.": "Vui lòng chọn một ngôn ngữ từ danh sách thả xuống.",
   "Please select a language:": "Vui lòng chọn một ngôn ngữ:",
   "Select Language": "Chọn Ngôn ngữ",
