:sparkles: add domain selector styles

--- a/assets/i18n/ar.json
+++ b/assets/i18n/ar.json
@@ -2,6 +2,8 @@
   "Please select a language from the dropdown.": "الرجاء اختيار لغة من القائمة المنسدلة.",
   "Please select a language:": "الرجاء اختيار لغة:",
   "Select Language": "اختر اللغة",
+  "Select language domain": "اختر دامنه لغة",
+  "Learn German": "تعلم اللغة الألمانية",
   "Tasks": "المهام",
   "Unlock Points": "فتح النقاط",
   "Rate this Challenge": "قيّم هذا التحدي",
