--- a/assets/i18n/de.json
+++ b/assets/i18n/de.json
@@ -2,6 +2,8 @@
   "Please select a language from the dropdown.": "Bitte wählen Sie eine Sprache aus dem Dropdown-Menü.",
   "Please select a language:": "Bitte wählen Sie eine Sprache:",
   "Select Language": "Sprache wählen",
+  "Select language domain": "Sprachdomain wählen",
+  "Learn German": "Lernen Sie Deutsch",
   "Tasks": "Aufgaben",
   "Unlock Points": "Freizuschaltende Punkte",
   "Rate this Challenge": "Bewerten Sie diese Übung",
