--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -2,6 +2,8 @@
   "Please select a language from the dropdown.": "Please select a language from the dropdown.",
   "Please select a language:": "Please select a language:",
   "Select Language": "Select Language",
+  "Select language domain": "Select language domain",
+  "Learn German": "Learn German",
   "Tasks": "Tasks",
   "Unlock Points": "Unlock Points",
   "Rate this Challenge": "Rate this Challenge",
