--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -2,6 +2,8 @@
   "Please select a language from the dropdown.": "Por favor, seleccione un idioma del menú desplegable.",
   "Please select a language:": "Por favor, seleccione un idioma:",
   "Select Language": "Seleccionar idioma",
+  "Select language domain": "Seleccionar dominio de idioma",
+  "Learn German": "Aprender alemán",
   "Tasks": "Tareas",
   "Unlock Points": "Desbloquear puntos",
   "Rate this Challenge": "Calificar este desafío",
