--- a/assets/i18n/tr.json
+++ b/assets/i18n/tr.json
@@ -2,6 +2,8 @@
   "Please select a language from the dropdown.": "Lütfen açılır menüden bir dil seçin.",
   "Please select a language:": "Lütfen bir dil seçin:",
   "Select Language": "Dil Seçin",
+  "Select language domain": "Dil Domenini Seçin",
+  "Learn German": "Aprender alemán",
   "Tasks": "Görevler",
   "Unlock Points": "Puanları Aç",
   "Rate this Challenge": "Bu Meydan Okumayı Değerlendir",
