--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -2,6 +2,9 @@
   "Please select a language from the dropdown.": "Vui lòng chọn một ngôn ngữ từ danh sách thả xuống.",
   "Please select a language:": "Vui lòng chọn một ngôn ngữ:",
   "Select Language": "Chọn Ngôn ngữ",
+  "Select language domain": "Chọn Domen Ngôn ngữ",
+
+  "Learn German": "Aprender alemán",
   "Tasks": "Nhiệm vụ",
   "Unlock Points": "Mở khóa Điểm",
   "Rate this Challenge": "Đánh giá Thử thách này",
