--- a/assets/i18n/pl.json
+++ b/assets/i18n/pl.json
@@ -2,6 +2,8 @@
   "Please select a language from the dropdown.": "Proszę wybrać język z listy rozwijanej.",
   "Please select a language:": "Proszę wybrać język:",
   "Select Language": "Wybierz język",
+  "Select language domain": "Wybierz domenę języka",
+  "Learn German": "Aprender alemán",
   "Tasks": "Zadania",
   "Unlock Points": "Odblokuj punkty",
   "Rate this Challenge": "Oceń to wyzwanie",
