--- a/assets/i18n/uk.json
+++ b/assets/i18n/uk.json
@@ -2,6 +2,8 @@
   "Please select a language from the dropdown.": "Будь ласка, виберіть мову зі списку.",
   "Please select a language:": "Будь ласка, виберіть мову:",
   "Select Language": "Вибрати мову",
+  "Select language domain": "Вибрати домен мови",
+  "Learn German": "Навчитися німецькій мові",
   "Tasks": "Завдання",
   "Unlock Points": "Розблокувати бали",
   "Rate this Challenge": "Оцініть це завдання",
