--- a/assets/i18n/zh.json
+++ b/assets/i18n/zh.json
@@ -2,6 +2,8 @@
   "Please select a language from the dropdown.": "请从下拉菜单中选择一种语言。",
   "Please select a language:": "请选择一种语言：",
   "Select Language": "选择语言",
+  "Select language domain": "选择语言领域",
+  "Learn German": "学习德语",
   "Tasks": "任务",
   "Unlock Points": "解锁积分",
   "Rate this Challenge": "为这个挑战评分",
